# llmops-webinar

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
finetune/: Modelfile  README.md  mlx-lora-llama3.1-8b.yaml  mlx-lora-qwen2.5-3b.yaml  torchtune-lora.yaml
finetune/data/: sms_phising.csv  sms_phising.json  train.jsonl  valid.jsonl
notebooks/: evaluation_helpers.py  langfuse_extensions.py  module-01-emotions-setup.ipynb  module-01-setup.ipynb  module-01-sms-phising-setup.ipynb
notebooks/cybersecurity/: evaluation_helpers.py  langfuse_extensions.py  module-00-data-prep.ipynb  module-01-demo.ipynb  module-01-structured-open-source-llm.ipynb  module-02-llms-evaluation.ipynb  module-02-sms-phising-llmops.ipynb  module-03-analyze-data.ipynb  module-03-observability.ipynb  module-04-automatic-prompt-optimization.ipynb  module-05-llm-finetuning.ipynb  module-demo.ipynb  sms_classifier.py
notebooks/cybersecurity/programs/: sms_classifier-gemma2-9b.json  sms_classifier-llama3.1-8b.json  sms_classifier-qwen2.5-0.5b.json  sms_classifier-qwen2.5-3b.json  sms_classifier-qwen2.5-7b.json  sms_classifier-qwen2.5:1.5b.json
